cmake_minimum_required(VERSION 2.6)

project(roflcopter)
set(VERSION "0.1.1-beta")
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/build/bin)
if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set (CMAKE_INSTALL_PREFIX /)
endif()

add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(man)

set(CPACK_GENERATOR "RPM;DEB")
set(CPACK_PACKAGE_CONTACT "Justin Helgesen <justinhelgesen@gmail.com>")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Nothing is more fun that watching a roflcopter fly!")
set(CPACK_PACKAGE_DESCRIPTION "Watch a roflcopter")
set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VERSION ${VERSION})
set(CPACK_PACKAGE_RELEASE 0)
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
include(CPack)
