cmake_minimum_required(VERSION 2.6)

project(roflcopter)
set(VERSION "0.1.1")
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

set(ROFL_BUILD_PATH ${CMAKE_SOURCE_DIR}/build)
if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
  set(CMAKE_INSTALL_PREFIX /)
endif()

add_subdirectory(include)
add_subdirectory(src)
add_subdirectory(man)

set(CPACK_GENERATOR "TGZ;RPM;DEB")
set(CPACK_OUTPUT_FILE_PREFIX ${ROFL_BUILD_PATH}/packages)
set(CPACK_PACKAGE_RELEASE 1)
set(CPACK_PACKAGE_CONTACT "Justin Helgesen <justinhelgesen@gmail.com>")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Nothing is more fun that watching a roflcopter fly!")
set(CPACK_PACKAGE_DESCRIPTION "Watch a roflcopter")
set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_VERSION ${VERSION})
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}.${CMAKE_SYSTEM_PROCESSOR}")
set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
include(CPack)
